--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
     <ImageView
         android:id="@+id/scamImage"
 
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
 
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
 
         app:srcCompat="@color/black" />
 
@@ -24,9 +24,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
 
-        android:layout_below="@id/scamImage"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="650dp"
         android:layout_alignParentLeft="true"
 
         android:text="Scam" />
@@ -37,12 +36,40 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
 
-        android:layout_below="@id/scamImage"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="50dp"
+
+        android:layout_marginTop="650dp"
+        android:layout_marginEnd="100dp"
         android:layout_alignParentRight="true"
 
         android:text="Safe" />
+
+    <Button
+        android:id="@+id/btnNext"
+
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="750dp"
+        android:layout_alignParentRight="true"
+
+
+        android:text="Next" />
+
+    <Button
+        android:id="@+id/btnInformation"
+
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="750dp"
+        android:layout_alignParentLeft="true"
+
+        android:text="Info" />
 
 
 </RelativeLayout>
