--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
 
-        android:layout_marginLeft="100dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="650dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textAllCaps="true"
 
         android:text="Scam" />
 
@@ -39,7 +40,8 @@
 
         android:layout_marginTop="650dp"
         android:layout_marginEnd="100dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAllCaps="true"
 
         android:text="Safe" />
 
@@ -52,7 +54,8 @@
 
         android:layout_marginEnd="10dp"
         android:layout_marginTop="750dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textAllCaps="true"
 
 
         android:text="Next" />
@@ -65,9 +68,10 @@
 
 
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="750dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textAllCaps="true"
 
         android:text="Info" />
 
