--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -8,13 +8,10 @@
 
     <Button
         android:id="@+id/btnClose"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CLOSE"
+        tools:ignore="HardcodedText,MissingConstraints"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
