--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,11 +64,12 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
 
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
 
         android:background="@null"
+        android:clickable="false"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/info_inactive" />
 
@@ -77,13 +78,14 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
 
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/btnInformation"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="5dp"
+        android:layout_toRightOf="@+id/btnInformation"
 
         android:background="@null"
+        android:clickable="false"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/next_inactive" />
 
@@ -92,13 +94,14 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
 
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/btnInformation"
+        android:layout_centerHorizontal="true"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
+        android:layout_toLeftOf="@+id/btnInformation"
 
         android:background="@null"
+        android:clickable="false"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/back_inactive" />
 
