--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:background">#FFFFFF</item>
     </style>
 
     <style name="Theme.ScamSense" parent="Base.Theme.ScamSense" />
