--- a/app/src/main/res/layout/activity_level_complete.xml
+++ b/app/src/main/res/layout/activity_level_complete.xml
@@ -40,4 +40,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
 
+    <ImageView
+        android:id="@+id/empty_stars"
+
+        app:srcCompat="@drawable/stars_backdrop"
+    />
+    <ImageView
+        android:id="@+id/one_star"
+
+        app:srcCompat="@drawable/star"
+    />
+    <ImageView
+        android:id="@+id/two_star"
+
+        app:srcCompat="@drawable/star"
+    />
+    <ImageView
+        android:id="@+id/three_star"
+
+        app:srcCompat="@drawable/star"
+    />
+
+
 </RelativeLayout>
