--- a/app/src/main/res/layout/activity_level_complete.xml
+++ b/app/src/main/res/layout/activity_level_complete.xml
@@ -43,23 +43,131 @@
     <ImageView
         android:id="@+id/empty_stars"
 
-        app:srcCompat="@drawable/stars_backdrop"
-    />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="250dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/stars_backdrop" />
+
     <ImageView
         android:id="@+id/one_star"
 
-        app:srcCompat="@drawable/star"
-    />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="5dp"
+
+        android:visibility="invisible"
+
+        app:srcCompat="@drawable/star" />
+
     <ImageView
         android:id="@+id/two_star"
 
-        app:srcCompat="@drawable/star"
-    />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="140dp"
+
+        android:visibility="invisible"
+
+        app:srcCompat="@drawable/star" />
+
     <ImageView
         android:id="@+id/three_star"
 
-        app:srcCompat="@drawable/star"
-    />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="275dp"
+
+        android:visibility="invisible"
+
+        app:srcCompat="@drawable/star" />
+
+    <ImageButton
+        android:id="@+id/back_to_home"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="450dp"
+        android:layout_marginLeft="100dp"
+
+        app:srcCompat="@drawable/back_to_home" />
+
+    <TextView
+        android:id="@+id/try_again"
+
+        android:text="Try Again"
+        android:textSize="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="100dp"
+
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/almost"
+
+        android:text="Almost..."
+        android:textSize="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="100dp"
+
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/well_done"
+
+        android:text="Well Done!"
+        android:textSize="50dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="90dp"
+
+        android:visibility="invisible"
+        />
+
+    <TextView
+        android:id="@+id/score"
+
+        android:text="score"
+        android:textSize="30dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+
+        android:layout_marginTop="380dp"
+        android:layout_marginLeft="170dp"
+
+        />
 
 
 </RelativeLayout>
