--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -7,7 +7,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_level">
+    tools:context=".activity_level"
+    tools:ignore="DiscouragedApi">
 
     <ImageView
         android:id="@+id/header_title"
@@ -15,6 +16,7 @@
         android:layout_width="430dp"
         android:layout_height="71dp"
         android:scaleType="fitCenter"
+        android:layout_centerHorizontal="true"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
