--- a/app/src/main/res/layout/activity_level_complete.xml
+++ b/app/src/main/res/layout/activity_level_complete.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     android:configChanges="orientation"
     android:screenOrientation="portrait"
+    tools:ignore="DiscouragedApi"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,6 +13,8 @@
 
     <ImageView
         android:id="@+id/header_title"
+
+        android:layout_centerHorizontal="true"
 
         android:layout_width="430dp"
         android:layout_height="71dp"
