--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:configChanges="orientation"
     android:screenOrientation="portrait"
+    tools:ignore="DiscouragedApi"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
