redid level hud again lol, fixed bugs, app works now finally

--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -1,18 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="0dp">
 
-    <TextView
-        android:id="@+id/popup_text"
+    <RelativeLayout
+        android:id="@+id/framelayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Information about the image will be displayed here."
-        android:textSize="18sp"
         android:padding="20dp"
-        android:textColor="#000000"
-        android:background="#68dd65"/>
+        android:background="@android:color/white"
+        tools:ignore="UselessParent">
+
+        <ImageButton
+            android:id="@+id/nextbutton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/nextbutton"/>
+
+        <TextView
+            android:id="@+id/popup_text"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:padding="20dp"
+            android:text="Information about the image will be displayed here."
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:layout_toStartOf="@id/nextbutton"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
+
 </RelativeLayout>
