--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:configChanges="orientation"
     android:screenOrientation="portrait"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity_level"
-    tools:ignore="DiscouragedApi">
+    tools:ignore="LockedOrientationActivity, DiscouragedApi">
 
     <ImageView
         android:id="@+id/header_title"
@@ -16,7 +16,6 @@
         android:layout_width="430dp"
         android:layout_height="71dp"
         android:scaleType="fitCenter"
-        android:layout_centerHorizontal="true"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -27,64 +26,55 @@
 
     <ImageButton
         android:id="@+id/menuButton"
-
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        app:layout_constraintTop_toTopOf="parent"
-
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
-
         android:background="@null"
         android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_button" />
 
     <ImageButton
         android:id="@+id/btnInformation"
-
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-
-        android:layout_toStartOf="@+id/menuButton"
+        android:layout_marginTop="10dp"
         android:background="@null"
         android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@id/menuButton"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/info_button" />
 
     <ImageView
         android:id="@+id/scamImage"
-
         android:layout_width="350dp"
         android:layout_height="500dp"
-        android:layout_below="@+id/header_title"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_centerHorizontal="true"
-
         android:layout_marginTop="50dp"
         android:scaleType="fitCenter"
+        app:layout_constraintTop_toBottomOf="@id/menuButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:srcCompat="@color/black" />
-
     <LinearLayout
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="64dp">
 
         <ImageButton
             android:id="@+id/btnSafe"
             android:layout_width="125dp"
             android:layout_height="125dp"
+            android:layout_marginEnd="20dp"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:layout_marginEnd="100px"
+            app:layout_constraintHorizontal_bias="0.5"
             app:srcCompat="@drawable/safe" />
 
         <ImageButton
@@ -94,6 +84,5 @@
             android:background="@null"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/scam" />
-
     </LinearLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
