--- a/app/src/main/res/layout/activity_level_complete.xml
+++ b/app/src/main/res/layout/activity_level_complete.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@drawable/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity_levelComplete">
@@ -17,6 +18,7 @@
         android:layout_centerHorizontal="true"
 
         android:layout_width="430dp"
+        android:background="@null"
         android:layout_height="71dp"
         android:scaleType="fitCenter"
 
