Started on ViewResults, changed values in LevelCompleteActivity

--- a/app/src/main/res/layout/view_results.xml
+++ b/app/src/main/res/layout/view_results.xml
@@ -27,4 +27,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app_header_text" />
 
+    <ExpandableListView
+        android:id="@+id/viewResultsList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:childDivider="#00000000" /> <!-- add group indicator drawable when we have one? -->
+
+
+
 </RelativeLayout>
