--- a/app/src/main/res/layout/row_child.xml
+++ b/app/src/main/res/layout/row_child.xml
@@ -4,12 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingStart="10dp"
-    android:padding="5dp">
+    android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/scamImage"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="fitCenter" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ChildTitle"
+        android:layout_marginTop="50dp"
+        android:background="@null"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:text="Child Title" />
 
