--- a/app/src/main/res/layout/row_parent.xml
+++ b/app/src/main/res/layout/row_parent.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="20dp"
+    >
 
     <TextView
+        android:id="@+id/ParentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ParentTitle"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:layout_marginLeft="30dp"
         android:text="Parent Title"
-        android:layout_marginLeft="30dp"/>
+        android:background="@null"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 </LinearLayout>
